# rasterizer

./: .gitignore  CMakeLists.txt  Makefile
include/: Camera.h  Color.h  Helpers.h  Matrix4.h  Mesh.h  Rotation.h  Scaling.h  Scene.h  Translation.h  Triangle.h  Vec3.h  Vec4.h
src/: Camera.cpp  Color.cpp  Helpers.cpp  Main.cpp  Matrix4.cpp  Mesh.cpp  Rotation.cpp  Scaling.cpp  Scene.cpp  Translation.cpp  Triangle.cpp  Vec3.cpp  Vec4.cpp  tinyxml2.cpp
